<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bookmark_status"
        android:menuCategory="secondary"
        android:title="@string/menu_bookmarks"
        app:showAsAction="ifRoom"/>
</menu>