...
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/tracks_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
