...
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/noBookmark"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        android:scrollbars="vertical" />

...
